<resources>
    <string name="app_name">Parcealable</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Alert Dialog</string>
    <string name="ok_button">Ok</string>
    <string name="text_label_title">title</string>
    <string name="text_label_from">from</string>
    <string name="text_label_to">to</string>
    <string name="text_label_body">body</string>
    <string name="send_button">Send</string>
</resources>
